<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Simple</string>
    <string name="app_name_pro" translatable="false">Simple</string>
    <string name="closeDrawer" translatable="false">Navigation View</string>
    <string name="openDrawer" translatable="false">Open Left Drawer</string>
    <string name="facebook_app_id" translatable="false">620654521451167</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="choose_email_client">Choose e-mail client</string>
    <string name="no_network">You\'re not online.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_about_category">About</string>
    <string name="share_action">Share current page</string>
    <string name="share_action_subject">Facebook page</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="fragment_main_downloading">Downloading&#8230;</string>
    <string name="terms_settings">Terms of Service</string>
    <string name="settings_more">More</string>
    <string name="update_share">Share Now</string>
    <string name="update_status">Update Status</string>
    <string name="update_location">Location</string>
    <string name="update_photo">Add Photos/Video</string>
    <string name="show_fab">Show Floating Action Button</string>
    <string name="show_fab_hint">Display a floating action button at bottom right of screen.</string>
    <string name="fab_jump">Show Jump To Top</string>
    <string name="quickaccess">Quick Links</string>
    <string name="newsfeed">News Feed</string>
    <string name="trending">Trending</string>
    <string name="messages">Messages</string>
    <string name="faved">Pins</string>
    <string name="favorites">Favorites</string>
    <string name="friends">Requests</string>
    <string name="groups">Groups</string>
    <string name="pages">Pages</string>
    <string name="photos">Photos</string>
    <string name="reminders">Events, Reminders &amp; Birthdays</string>
    <string name="events">Events</string>
    <string name="onthisday">On This Day</string>
    <string name="saved">Saved</string>
    <string name="settings">Settings</string>
    <string name="bugs">Report A Bug</string>
    <string name="navigation_pref">Navigation Drawer Items</string>
    <string name="navigation_pref_hint">Customize the navigation drawer by removing items you don\'t use.</string>
    <string name="trending_nav">Show Trending</string>
    <string name="friends_nav">Show Friends</string>
    <string name="groups_nav">Show Groups</string>
    <string name="pages_nav">Show Pages</string>
    <string name="photos_nav">Show Photos</string>
    <string name="events_nav">Show Events</string>
    <string name="onday_nav">Show On This Day</string>
    <string name="saved_nav">Show Saved</string>
    <string name="news_feed_preferences">Facebook Preferences</string>
    <string name="feed_choice">Sort News Feed By</string>
    <string-array name="pref_default_feed">
        <item>Most Recent</item>
        <item>Top News</item>
    </string-array>
    <string name="fb_chat">Active Friends</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_question">Refresh?</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search Facebook</string>
    <string name="end">Log out</string>
    <string name="exit">Close</string>
    <string-array name="pref_theme_entries">
        <item>Facebook Blue</item>
		<item>Falcon</item>
        <item>Material Pink</item>
        <item>Deep Purple</item>
		<item>Jorell Blue</item>
		<item>Dark Green</item>
		<item>Light Green</item>
		<item>Amber</item>
		<item>Deep Orange</item>
		<item>Cyan</item>
		<item>Material Dark</item>
        <item>AMOLED</item>
    </string-array>
    <string-array name="pref_theme_fb_entries">
		<item>Facebook Mobile</item>
        <item>Material Light</item>
		<item>Material Dark</item>
        <item>AMOLED</item>
    </string-array>
    <string name="image_chooser">Image Chooser</string>
    <string name="clear_cache">Clear App Cache On Close</string>
    <string name="people_you_hint">Hide People You May Know</string>
    <string name="addPage">Add to Pins</string>
	<string name="no_images">Disable Images</string>
    <string name="interval_pref_description">Notifications will be synced every: %s</string>
    <string-array name="update_interval">
        <item>30 seconds (high data usage)</item>
        <item>1 minute (high data usage)</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes (default)</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
    </string-array>
    <string name="you_have_one_message">You have 1 new message</string>
    <string name="you_have_n_messages">You have %d new messages</string>
    <string name="activate_messages">Message Notifications</string>
    <string name="notifications_settings">Notifications</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="message_sound">Message Notification Sound</string>
    <string name="silent">No Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="led_light">Notification LED</string>
    <string name="simple_lock">Enable Simple Lock</string>
    <string name="lock_text_new">Secure Simple with a 4-digit pin code.</string>
    <string name="lock_text_new_fingerprint">Secure Simple with a 4-digit pin code. Alternatively you can use your fingerprint.</string>
    <string name="context_save_image">Download Image</string>
    <string name="context_share_image">Share Image</string>
    <string name="context_copy_image_link">Copy link</string>
    <string name="context_share_image_progress">Preparing&#8230;</string>
    <string name="content_copy_link_done">Link copied to clipboard</string>
    <string name="permission_denied">Permission denied. This action cannot be completed.</string>
    <string name="eula_string" translatable="false">EULA, Terms &amp; Policies:\n\n

\nCopyright 2016 Creative Trends. All Rights Reserved.

\n\nThis software may not, in whole or in any part, be copied, reproduced, transmitted, translated (into any
language, natural or computer), stored in a retrieval system, reduced to any electronic medium or machine readable
format, or by any other form or means without prior consent, in writing, from Creative Trends.

\n\nYou are granted a limited license to use this software. The software may be used or copied only in accordance
with the terms of that license, which is described in the following paragraphs.

\n\nTRADEMARKS:
\n\nSimple for Facebook, NewsBite, Creative Trends, Creative Trends. All Simple and NewsBite Icons and logos. All apps made or produced by Creative Trends.

\n\nLICENSE:
\n\n\"THE SOFTWARE\" shall be taken to mean the software contained in this app and any subsequent versions
or upgrades received as a result of having purchased this app. \"BUYER\" shall be taken as the original
purchaser of the software.

\n\nBuyer has the non-exclusive right to the use of software only on a single device. Buyer may not electronically
transfer the program from one device to another over any type of network. Buyer may not distribute copies
of the software or the accompanying documentation to others either for a fee or without charge. Buyer may not modify
or translate the program or documentation. User may not disassemble the program or allow it to be disassembled
into its constituent source code. Buyer\'s use of the software indicates his/her acceptance of these terms
and conditions. If buyer does not agree to these conditions, return the distribution media, documentation, and
associated materials to the vendor from whom the software was purchased, and/or uninstall the software from the device,
and erase the software from any and all storage devices upon which it may have been installed.

\n\nThis license agreement shall be governed by the laws of The United States of America, New Jersey and
shall inure to the benefit of Creative Trends or its assigns.

\n\nREFUNDS:
\n\nCreative Trends will grant the buyer of any of our apps a full refund of their purchase within two hours of purchase. After this time has passed refunds will only be granted at the discretion of Creative Trends.

\n\nCHANGES:
\n\nYou agree that Creative Trends has the right to test and remove features at it\'s discretion.

\n\nDISCLAIMER / LIMITATION OF LIABILITY:
\n\nBuyer acknowledges that the software may not be free from defects and may not satisfy all of buyer\'s
needs. The software and any accompanying written materials are licensed \"AS IS\". Buyer\'s exclusive
remedy during the warranty period (if any) shall be fixes via software updates if needed. In no event will Creative Trends be liable for direct, indirect, incidental or consequential damage or
damages resulting from loss of use, or loss of anticipated profits resulting from any defect in the software,
even if it has been advised of the possibility of such damage. Some laws do not allow exclusion or limitation
of implied warranties or liabilities for incidental or consequential damages, so the above limitations or
exclusion may not apply.

\n\nSPECIFIC RESTRICTIONS:
\n\nIn accordance with the COMPUTER SOFTWARE RENTAL ACT OF 1990, this software may not be rented, lent or leased.
\n\nThe software and accompanying documentation may not be provided by a \"Backup Service\" or any other vendor
which does not provide an original package as composed of Creative Trends, including but not limited to all original
distribution media, documentation, registration cards, and insertions.</string>
    <string name="copy_right">\u00A9</string>
	<string name="error_general">Error</string>
    <string name="save_img">Save</string>
    <string name="download_manager_disabled">Download Manager Disabled</string>
    <string name="enable_location">Enable Location</string>
    <string name="hide_editor">Hide Status Editor</string>
    <string name="round_pics">Rounded Images</string>
    <string name="round_pics_hint">Show rounded pictures instead of squared.</string>
    <string name="hide_ads">Remove Sponsored Posts</string>
	<string name="no_images_hint_new">Disable images on mobile data to save on data usage. Images will load normally on WiFi.</string>
	<string name="exit_message">Are you sure you want to close Simple?</string>
	<string name="version">Version:</string>
	<string name="welcome">Hello</string>
    <string name="saved_pin_message">If you forget your pin, please clear Simple\'s data from your phones application manager.</string>
    <string name="button1_large_text" translatable="false">1</string>
    <string name="button2_large_text" translatable="false">2</string>
    <string name="button3_large_text" translatable="false">3</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="copy_url">Copy to clipboard</string>
	<string name="clear_cache_description_new">Clear cache when closing Simple.</string>
    <string name="download">Download</string>
    <string name="auto_night_title">Auto Night Theme</string>
    <string name="most_recent">Most Recent</string>
    <string name="top_news">Top News</string>
    <string name="analytics">Allow Analytics</string>
    <string name="analytics_hint">Allow Simple to collect, anonymous app usage. No personal information will be collected.</string>
    <string name="birthday">Birthdays</string>
    <string name="feedback">Send Feedback</string>
    <string name="ratesimple">Rate Simple</string>
    <string name="color_navigation">Color Navigation Bar</string>
    <string name="open_in">Open Links With Simple</string>
    <string name="terms_settings_new">Terms of Use</string>
</resources>