<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/close"
        android:orderInCategory="9"
        android:title="@string/exit"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="8"
        android:title="@string/end"
        app:showAsAction="never" />



    <item
        android:id="@+id/copy_link"
        android:orderInCategory="6"
        android:title="@string/copy_url"
        app:showAsAction="never" />


    <item
        android:id="@+id/simple_pinned"
        android:orderInCategory="4"
        android:title="@string/faved"
        app:showAsAction="never" />


    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        android:title="@string/search"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />



</menu>